# davidson-det

./: LICENSE  README.md  main.py  pyproject.toml  relatorio.py  requirements.txt  style.css
.streamlit/: config.toml
tabs/: conduta_content.py  credibilidade_content.py  custos_content.py  utilidade_content.py  validade_content.py
utils/: enums.py
