[tool.poetry]
name = "davidson-det"
version = "0.0.1"
description = "This a Digital Evaluative Technology (DET) to help on a Davidson's Core Criteria meta-evaluation"
authors = ["Renato Moraes"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
